--- a/src/assets/styles/components/_defaults.scss
+++ b/src/assets/styles/components/_defaults.scss
@@ -53,7 +53,14 @@ $xl: 1920px;
 
 .p-dialog {
   .p-dialog-footer {
-    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 100%;
+    gap: 1rem;
+    padding: 1.5rem;
+    border-top: 1px solid #e6e7eb;
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
   }
 }
 
@@ -63,9 +70,6 @@ $xl: 1920px;
   justify-content: flex-end;
   width: 100%;
   gap: 1rem;
-  padding: 1.5rem;
-  background-color: #e6e7eb;
-  border-radius: 0 0 var(--border-radius) var(--border-radius);
 }
 
 @keyframes p-component-overlay-enter-animation {
