--- a/src/assets/styles/components/navbar.scss
+++ b/src/assets/styles/components/navbar.scss
@@ -1,3 +1,8 @@
+body:has(.sidebar) .navbar-container {
+  margin-left: var(--sidebar-width);
+  width: calc(100% - var(--sidebar-width));
+}
+
 .navbar-container {
   width: 100%;
   background: var(--surface-a);
@@ -7,11 +12,6 @@
   top: 0;
   left: 0;
   z-index: 20;
-
-  &.has-sidebar {
-    margin-left: var(--sidebar-width);
-    width: calc(100% - var(--sidebar-width));
-  }
 
   nav {
     display: flex;
